--- a/haley-matt/index.html
+++ b/haley-matt/index.html
@@ -35,7 +35,7 @@
     </section>
     <nav class="main-nav">
       <!-- TODO: Add a hamburger menu icon here, which will show/hide depending on screen width (desktop vs. mobile). -->
-      <meta name="viewport" content="640px, initial-scale=1.0">
+      <!-- <meta name="viewport" content="640px, initial-scale=1.0"> -->
       <div id="ham-class" class="icon-menu hamburger"></div>
       <ul>
         <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
