--- a/haley-matt/index.html
+++ b/haley-matt/index.html
@@ -27,16 +27,16 @@
     <!-- https://css-tricks.com/snippets/css/clear-fix/ -->
     <!-- Clearfix is an easy way to remove all styling from an element's child elements. It is typically used with float.  -->
 
-    <section class="heading-group-h1">
+    <section class="">
       <h1>
         Kilovolt Blog!
       </h1>
       <h2>The shocking power of static pages</h2>
     </section>
-    <nav class="main-nav">
+    <nav>
       <!-- TODO: Add a hamburger menu icon here, which will show/hide depending on screen width (desktop vs. mobile). -->
       <div id="ham-menu" class="icon-menu hamburger"></div>
-      <ul>
+      <ul id="nav-menu" class="nav-ul">
         <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
         <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
         <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
